tests/core/snapshots/graphql-conformance-019.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "newName": "Tailcall",
        "userPost": {
          "id": 0,
          "content": "Hello from user 4"
        }
      }
    }
  }
}
