tests/core/snapshots/graphql-conformance-019.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "page": {
        "name": "Tailcall_page",
        "pagePost": {
          "id": 1,
          "content": "Hello from page 4"
        }
      }
    }
  }
}
