tests/core/snapshots/graphql-conformance-019.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(hostname: "0.0.0.0", port: 8001, queryValidation: false) @upstream(httpCache: 42) {
  query: Query
}

type Page {
  id: ID!
  name: String!
  post: Post @modify(name: "pagePost")
}

type Post {
  content: String
  id: ID!
}

type Query {
  page(id: ID!): Page!
    @graphQL(args: [{key: "id", value: "{{.args.id}}"}], url: "http://upstream/graphql", name: "page")
  user(id: ID!): User!
    @graphQL(args: [{key: "id", value: "{{.args.id}}"}], url: "http://upstream/graphql", name: "user")
}

type User {
  id: ID!
  name: String! @modify(name: "newName")
  post: Post @modify(name: "userPost")
}
